src/syntax_highlight/overlay_tests/snapshots/jiq__syntax_highlight__overlay__overlay_tests__snapshot_tests__snapshot_cursor_at_end.snap
---
source: src/syntax_highlight/overlay_tests/snapshot_tests.rs
expression: serialize_spans(&result)
---
- content: Hi
  fg: red
- content: " "
  fg: "rgb(236,236,244)"
  modifiers:
    - reversed
