src/syntax_highlight/overlay_tests/snapshots/jiq__syntax_highlight__overlay__overlay_tests__snapshot_tests__snapshot_cursor_in_middle.snap
---
source: src/app/syntax_overlay.rs
expression: serialize_spans(&result)
---
- content: He
  fg: red
- content: l
  fg: red
  modifiers:
    - reversed
- content: lo
  fg: red
