src/syntax_highlight/overlay_tests/snapshots/jiq__syntax_highlight__overlay__overlay_tests__snapshot_tests__snapshot_extract_visible_with_scroll.snap
---
source: src/app/syntax_overlay.rs
expression: serialize_spans(&visible)
---
- content: "56789"
  fg: red
- content: ABCDE
  fg: blue
