src/syntax_highlight/overlay_tests/snapshots/jiq__syntax_highlight__overlay__overlay_tests__snapshot_tests__snapshot_highlight_bracket_pairs_complex_query.snap
---
source: src/syntax_highlight/overlay_tests/snapshot_tests.rs
expression: serialize_spans(&result)
---
- content: ".items"
  fg: cyan
- content: "["
  fg: yellow
  modifiers:
    - bold
    - underlined
- content: "]"
  fg: yellow
  modifiers:
    - bold
    - underlined
- content: " | "
- content: select
  fg: blue
- content: (
  fg: magenta
- content: ".price"
  fg: cyan
- content: " > "
- content: "100"
  fg: cyan
- content: )
  fg: magenta
- content: " | "
- content: "{"
  fg: magenta
- content: name
  fg: cyan
- content: ", "
- content: price
  fg: cyan
- content: "}"
  fg: magenta
