src/syntax_highlight/overlay_tests/snapshots/jiq__syntax_highlight__overlay__overlay_tests__snapshot_tests__snapshot_highlight_bracket_pairs_curly_braces.snap
---
source: src/syntax_highlight/overlay_tests/snapshot_tests.rs
expression: serialize_spans(&result)
---
- content: "{"
  fg: magenta
  modifiers:
    - underlined
- content: name
  fg: cyan
- content: ": "
- content: ".x"
  fg: cyan
- content: ", "
- content: coun
  fg: cyan
- content: t
  fg: cyan
  modifiers:
    - underlined
- content: ": "
- content: ".y"
  fg: cyan
- content: "}"
  fg: magenta
