src/syntax_highlight/overlay_tests/snapshots/jiq__syntax_highlight__overlay__overlay_tests__snapshot_tests__snapshot_highlight_bracket_pairs_nested.snap
---
source: src/syntax_highlight/overlay_tests/snapshot_tests.rs
expression: serialize_spans(&result)
---
- content: map
  fg: blue
- content: (
  fg: "rgb(255,217,61)"
  modifiers:
    - bold
    - underlined
- content: select
  fg: blue
- content: (
  fg: magenta
- content: "."
- content: )
  fg: magenta
- content: )
  fg: "rgb(255,217,61)"
  modifiers:
    - bold
    - underlined
