src/syntax_highlight/overlay_tests/snapshots/jiq__syntax_highlight__overlay__overlay_tests__snapshot_tests__snapshot_highlight_bracket_pairs_preserves_style.snap
---
source: src/syntax_highlight/overlay_tests/snapshot_tests.rs
expression: serialize_spans(&result)
---
- content: map
  fg: blue
  modifiers:
    - bold
- content: (
  fg: "rgb(255,217,61)"
  modifiers:
    - bold
    - underlined
- content: "."
  fg: blue
  modifiers:
    - bold
- content: )
  fg: "rgb(255,217,61)"
  modifiers:
    - bold
    - underlined
