src/syntax_highlight/overlay_tests/snapshots/jiq__syntax_highlight__overlay__overlay_tests__snapshot_tests__snapshot_highlight_bracket_pairs_simple.snap
---
source: src/syntax_highlight/overlay_tests/snapshot_tests.rs
expression: serialize_spans(&result)
---
- content: map
  fg: magenta
- content: (
  fg: yellow
  modifiers:
    - bold
    - underlined
- content: "."
  fg: magenta
- content: )
  fg: yellow
  modifiers:
    - bold
    - underlined
