src/syntax_highlight/overlay_tests/snapshots/jiq__syntax_highlight__overlay__overlay_tests__snapshot_tests__snapshot_highlight_bracket_pairs_square_brackets.snap
---
source: src/syntax_highlight/overlay_tests/snapshot_tests.rs
expression: serialize_spans(&result)
---
- content: ".items"
  fg: cyan
- content: "["
  fg: "rgb(255,217,61)"
  modifiers:
    - bold
    - underlined
- content: "0"
  fg: cyan
- content: "]"
  fg: magenta
- content: "["
  fg: magenta
- content: "1"
  fg: "rgb(255,217,61)"
  modifiers:
    - bold
    - underlined
- content: "]"
  fg: magenta
